--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "phpoffice/phpspreadsheet": "1.29.*",
+        "maennchen/zipstream-php": "^2.1"
     },
     "autoload": {
         "psr-4": {
